--- a/PCBPanels/PCBPanels.vcxproj.filters
+++ b/PCBPanels/PCBPanels.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="pch.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="nanosvg.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="CFileSVG.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PCBPanels.cpp">
@@ -54,6 +60,12 @@
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="nanosvg.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="CFileSVG.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
