--- a/PCBPanels/PCBPanels.vcxproj.filters
+++ b/PCBPanels/PCBPanels.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="CFileSVG.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="CPathSvg.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="nanosvgrast.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PCBPanels.cpp">
@@ -66,6 +72,9 @@
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="CFileSVG.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="CPathSvg.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
